_wp-block-quote.scss: unpacked @extends, removed nested vars, fixed some associated visual regressions involving _spacing.scss and made style corrections during that process

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -22,5 +22,9 @@ $gutenberg-breakpoint-xl: 992px;
 /** Gutenberg spacing unit */
 $gutenberg-spacing: 30px;
 
+/** Gutenberg font-sizes */
+$gutenberg-font-md: 1rem;
+$gutenberg-font-lg: 1.25rem;
+
 /** Gutenberg colors */
 $gutenberg-color-muted: rgba(0, 0, 0, 0.2); // used on elements like hr
